# CS596-CPU-vs-GPU

./: CMakeLists.txt  CPU_only_processing.cpp  GPU_aggregation_threads.cu  GPU_aggregation_without_threads.cu  Plan.txt  README.md  aggregation_without_threads.cu  cpu_without_multithreading.cpp  input_datasets.json  modified_server.cpp  multithreading_in_cpu.cpp  updated_aggregation.cu
